gobmkida/c0/owl_defend
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/engine/owl.c:2254:12: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
init_owl( &owl_defend_owl, targeta, 0, 0, 1); 
           ^~~~~~~~~~~~~~
           owl_defend
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/engine/owl.c:2255:19: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
owl_make_domains( owl_defend_owl, 0LL); 
                  ^~~~~~~~~~~~~~
                  owl_defend
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/engine/owl.c:2256:29: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
prepare_goal_list( targeta, owl_defend_owl, owl_goal_worm, &goal_worms_computed, kworma, 1); 
                            ^~~~~~~~~~~~~~
                            owl_defend
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/engine/owl.c:2257:47: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
result = do_owl_defend( targeta, &move, &wid, owl_defend_owl, 0, 0, 0); 
                                              ^~~~~~~~~~~~~~
                                              owl_defend
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/engine/owl.c:2278:1: error: use of undeclared identifier 'owl_defend_owl'
owl_defend_owl->goal, 
^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/owl_defend/src/obj/1/owl.o] Error 1
